--- a/server/sample.env
+++ b/server/sample.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
 DEBUG=server*
-MONGODB_URI=mongodb://127.0.0.1:27017/nature-app-database
+MONGODB_URI=mongodb+srv://admin:Hc7OUdLjj1cvS7Qh@cluster0.edm3b.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 SESSION_SECRET=
 CLOUDINARY_URL=
