working on the server routers

--- a/server/sample.env
+++ b/server/sample.env
@@ -2,5 +2,5 @@ NODE_ENV=development
 PORT=3000
 DEBUG=server*
 MONGODB_URI=mongodb+srv://admin:Hc7OUdLjj1cvS7Qh@cluster0.edm3b.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-SESSION_SECRET=
+SESSION_SECRET=asdfasdf
 CLOUDINARY_URL=
