adds more deploy config

--- a/server/sample.env
+++ b/server/sample.env
@@ -6,3 +6,4 @@ SESSION_SECRET=dgfsgdsfgdfas
 CLOUDINARY_URL=
 MONGODB_EXTERNAL_URI=mongodb+srv://admin:Hc7OUdLjj1cvS7Qh@cluster0.edm3b.mongodb.net/nature-app-database?retryWrites=true&w=majority
 MONGODB_URI=mongodb+srv://admin:Hc7OUdLjj1cvS7Qh@cluster0.edm3b.mongodb.net/nature-app-database?retryWrites=true&w=majority
+ALLOWED_CORS_ORIGINS=http://localhost:3001,http://localhost:5000
