--- a/server/sample.env
+++ b/server/sample.env
@@ -3,7 +3,7 @@ PORT=3000
 DEBUG=server*
 MONGODB_LOCAL_URI=mongodb://127.0.0.1:27017/nature-app-database
 SESSION_SECRET=dgfsgdsfgdfas
-CLOUDINARY_URL=
+CLOUDINARY_URL=cloudinary://159718621324785:wLweWDcbZ3yu8tmK5L_jl8q4h5c@dijywenoz
 MONGODB_EXTERNAL_URI=mongodb+srv://admin:Hc7OUdLjj1cvS7Qh@cluster0.edm3b.mongodb.net/nature-app-database?retryWrites=true&w=majority
 MONGODB_URI=mongodb+srv://admin:Hc7OUdLjj1cvS7Qh@cluster0.edm3b.mongodb.net/nature-app-database?retryWrites=true&w=majority
 ALLOWED_CORS_ORIGINS=http://localhost:3001,http://localhost:5000
