--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "leaflet": "^1.7.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-leaflet": "^3.1.0",
